Изменена структура стилей. Каждый бэм-блок оформляется в отдельном файле в папке blocks. А sass-bulk собирает всё в один файл.

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,5 +1,5 @@
 
-@import "variables";
-@import "mixins";
-@import "global";
-@import "main";
+@import 'global/variables.scss';
+@import 'global/mixins.scss';
+@import 'global/global.scss';
+@import 'blocks/*';
