Ушёл Bower. Пришёл Yarn

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,5 +1,6 @@
 
-@import 'global/variables.scss';
-@import 'global/mixins.scss';
-@import 'global/global.scss';
+@import 'variables.scss';
+@import 'fonts.scss';
+@import 'mixins.scss';
+@import 'global.scss';
 @import 'blocks/*';
